--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -88,6 +88,7 @@ body[data-device="web"] {
 
   .Banner {
     max-width: var(--desktop-width);
+    margin-top: 9px;
   }
 
   .header-annual-inc-info {
@@ -1565,4 +1566,8 @@ input#pan {
 .callback-button-container img{
   width: 100%;
   object-fit: cover;
+}
+
+.Toastify {
+  display: none;
 }
