toast height bug fixed for web
Signed-off-by: Vinod Jat <vinod@fisdom.com>

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -125,6 +125,9 @@ body[data-device="web"] {
   #root > div:nth-child(2) {
     height: 100%;
   }
+  .Toastify {
+    height: auto !important;
+  }
 
   .Loader {
     max-width: var(--desktop-width);
