--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -736,7 +736,7 @@ body[data-device="mobile"] {
   padding: 20px;
   margin: 20px 0 0 0;
   background: #fff;
-  height: 100%;
+  height: auto;
 
   .single-full-image-skelton {
     border-radius: 6px;
