--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -1697,6 +1697,7 @@
         border: 1px solid;
         border-color: #767e86;
         min-width: 130px;
+        cursor: pointer;
 
         .check-icon {
           width: 10px;
