--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1565,7 +1565,7 @@ input#pan {
   .more-details-sub-text{
     color: #747D86;
     line-height: 20px;
-    text-align: justify;
+    text-align: left;
     margin: 0;
   }
   .more-details-bullets{
