--- a/react_webviews/src/payment/components/Style.scss
+++ b/react_webviews/src/payment/components/Style.scss
@@ -481,8 +481,9 @@
       padding: 10px;
       margin: 0;
     }
-    .footer.old-ios {
+    .footer.ios {
       position: relative !important;
+      margin-top: 50px;
     }
     .consent {
       color: #878787;
