--- a/react_webviews/src/dashboard/invest/Style.scss
+++ b/react_webviews/src/dashboard/invest/Style.scss
@@ -32,6 +32,10 @@
 .invest-landing {
   padding: 30px 0 50px 0;
 
+  .main-top-subtitle {
+    margin-bottom: 20px;
+  }
+
   .kyc {
     background-size: cover;
     background-repeat: no-repeat;
