--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -868,3 +868,15 @@ body[data-device="mobile"] {
     opacity: 0.7;
   }
 }
+
+
+.react-dropdown-select-option-label{
+  color: black;
+}
+
+.react-dropdown-select{
+  background: rgba(238, 238, 238, 0.3) !important;
+}
+.react-dropdown-select-option-remove{
+  color: black;
+}
