--- a/react_webviews/src/withdraw/components/style.scss
+++ b/react_webviews/src/withdraw/components/style.scss
@@ -144,12 +144,18 @@
 }
 
 .withdraw-insta {
+  margin-bottom: 50px;
   .withdraw-zero-invest-icon {
     margin: 30px 0 10px 0;
   }
   .withdraw-insta-icon,
   .withdraw-insta-head {
     text-align: center;
+  }
+  .withdraw-insta-icon{
+    img{
+      width: 100px;
+    }
   }
   .withdraw-insta-head {
     color: #4a4a4a;
@@ -163,6 +169,15 @@
     font-weight: 400;
     margin: 10px 0 0 0;
   }
+}
+
+.withdraw-insta-failed{
+  .help-contact-email{
+    display: flex;
+  }
+}
+.withdraw-insta-failed.pr-error-container .error-text{
+  text-align: left !important;
 }
 
 .withdraw-insta-exceed {
