--- a/react_webviews/src/withdraw/common/Style.scss
+++ b/react_webviews/src/withdraw/common/Style.scss
@@ -35,3 +35,33 @@
     }
   }
 }
+
+.withdraw-two-button {
+  .Footer {
+    margin: 10px !important;
+  }
+
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex: 1 1 40%;
+    margin: 0 30px 0 0;
+    width: 50px;
+  }
+
+  .footer-one {
+    color: #0a1c32;
+    font-size: 10px;
+    font-weight: 500;
+    align-self: flex-start;
+    text-align: left;
+  }
+
+  .footer-two {
+    color: #0A1C32;
+    font-size: 16px;
+    font-weight: 400;
+    align-self: flex-start;
+  }
+}
