--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -385,13 +385,13 @@
 .kyc-journey .steps-container .step .disc {
   position: absolute;
   top: 20px;
-  left: 57px;
+  margin-left: 40px;
   font-size: 13px;
 }
 
 .kyc-journey .steps-container .step .title__selected {
-  color: black;
-  font-weight: 500;
+  color: #333333;
+  font-weight: 600;
 }
 
 ///////////// PAN HELP START //////////////
@@ -524,7 +524,7 @@
 
 ///////////// KYC COMPLIANT COMPLETE  START //////////////
 
-.contact-us {
+.kyc-contact-us {
   color: #8d879b;
   font-size: 14px;
   text-align: center;
