replaced DropdownWithoutIcon with autochange DropDown + added css changes

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -134,6 +134,7 @@ body[data-device="web"] {
   .Container {
     height: auto !important;
     overflow: hidden;
+    min-height: 80vh !important; // fix it 
   }
 
   #root .ContainerWrapper {
